tdf#111799 Added initialization of the font

The font was not intialized for TextLayouterDevice object.

Change-Id: I18dc9e2c6fa09c43d66f7b230133cbeb00b7f585